# Graph_meta

./: .gitignore  CMakeLists.txt  graph.cpp  lib.cpp  lib.h  main.cpp  test_version.cpp  version.h.in
include/: base_func.hpp  graph.hpp  lagrange_group.hpp  lib.h  matrix.hpp  simvolic_diff.hpp  testBB.hpp  version.h
